--- a/pi.css
+++ b/pi.css
@@ -34,6 +34,7 @@ html
 {
 	height: 100%;
 }
+
 body
 {
 	display: flex;
@@ -52,15 +53,12 @@ footer
    min-width: 100%;
    display: flex;
    justify-content: space-evenly;
-
    position: fixed;
    bottom:0;
 }
 
-h1
-{
+h1 {
 	font-size: 50px;
-   font-family: 'Alegreya';
 }
 
 h2
@@ -88,9 +86,9 @@ td, th
 table
 {
    width: 100%;
-    border-collapse: collapse;
-    text-align: center;
-    flex-wrap: wrap;
+   border-collapse: collapse;
+   text-align: center;
+   flex-wrap: wrap;
 }
 
 label
@@ -130,7 +128,7 @@ strong
    text-decoration: underline;
 }
 
-.button
+button
 {  
    border: 2px solid #42414d;
    border-radius: 9px;
@@ -141,7 +139,7 @@ strong
    box-sizing: border-box;
 }
 
-.button:hover{
+button:hover{
 	background-color: #42414d;  
 	color: white;
 	transition: 0.6s all;
