Changement des titres, ajout d'une page et update du css

--- a/pi.css
+++ b/pi.css
@@ -122,10 +122,16 @@ input
 	color: red;
 }
 
-strong 
+strong
 {
    display: inline-block;
    text-decoration: underline;
+}
+
+caption 
+{
+   margin-top: 10px;
+   margin-bottom: 5px;
 }
 
 button
