--- a/pi.css
+++ b/pi.css
@@ -103,7 +103,7 @@ label
 input
 {
    margin-left: 10px;
-   padding-left: 5px;
+   padding: 5px;
    margin-bottom: 10px;
 	border: #2b2a33;
    background-color: #42414d;
@@ -111,10 +111,60 @@ input
 	font-size: 20px;
 }
 
+.colonne
+{
+   display: flex;
+   flex-direction: column;
+}
+
+.ligne
+{
+   display: flex;
+   flex-direction: column;
+   flex-wrap: wrap;
+}
+
 .center
 {
 	display: flex;
 	justify-content: center;
+}
+
+.milieu
+{
+   margin: auto;
+}
+
+.prendre-moitie-place
+{
+   width: 50%;
+   min-width: 220px;
+}
+
+.text-invisible
+{
+   color: #42414d;
+}
+
+.espace-caracters
+{
+   letter-spacing: 2px;
+}
+
+.fill
+{
+   width: 100%;
+}
+
+.espace-haut-bas
+{
+   margin-top: 10px;
+   margin-bottom: 10px;
+}
+
+.text-centre
+{
+   text-align: center;
 }
 
 .red
@@ -132,6 +182,7 @@ caption
 {
    margin-top: 10px;
    margin-bottom: 5px;
+   width: 100%;
 }
 
 button
@@ -139,10 +190,11 @@ button
    border: 2px solid #42414d;
    border-radius: 9px;
    font-size: 1.2em;
-   width: 100%;
+   /* width: 100%;*/
    padding: 10px 20px;
    margin: 8px 0;
    box-sizing: border-box;
+   min-width: 200px;
 }
 
 button:hover{
@@ -184,5 +236,10 @@ button:hover{
    #pi_value
    {
       min-width: 100px;
+   }
+   input 
+   {
+      width: 220px;
+      margin: 0px;
    }
 }
